Bug 99086 - [VLV/CHV DSI][drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A
Summary: [VLV/CHV DSI][drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: PatchMerged
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-14 18:18 UTC by Jonas Aaberg
Modified: 2017-07-27 16:55 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: display/atomic


Attachments
Fix for this bug (4.91 KB, patch)
2016-12-14 18:18 UTC, Jonas Aaberg
no flags Details | Splinter Review

Description Jonas Aaberg 2016-12-14 18:18:25 UTC
Created attachment 128474 [details] [review]
Fix for this bug

On drm-tip e75e28e88de6cf33423337a64ad377116ae2141c i915 now works on my Asus T100HA - cherry trail.
However, I get some error prints.

--
[  264.110049] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=13947 end=13948) time 14 us, min 1272, max 1279, scanline start 1280, end 1282
[  974.205415] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=56621 end=56622) time 14 us, min 1272, max 1279, scanline start 1280, end 1281
[ 1007.285699] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=58609 end=58610) time 12 us, min 1272, max 1279, scanline start 1280, end 1281
[ 1738.181215] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=102533 end=102534) time 18 us, min 1272, max 1279, scanline start 1280, end 1282
[ 2140.719325] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=126724 end=126725) time 14 us, min 1272, max 1279, scanline start 1280, end 1282
[ 2189.495157] perf: interrupt took too long (3161 > 2500), lowering kernel.perf_event_max_sample_rate to 63000
[ 2215.699125] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=131230 end=131231) time 11 us, min 1272, max 1279, scanline start 1280, end 1280
[ 2371.366424] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=140585 end=140586) time 16 us, min 1272, max 1279, scanline start 1280, end 1283
[ 2573.159594] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=152712 end=152713) time 8 us, min 1272, max 1279, scanline start 1280, end 1280
[ 2584.990646] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=153423 end=153424) time 10 us, min 1272, max 1279, scanline start 1280, end 1282
[ 2612.613070] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=155083 end=155084) time 12 us, min 1272, max 1279, scanline start 1280, end 1282
[ 6636.810230] perf: interrupt took too long (3960 > 3951), lowering kernel.perf_event_max_sample_rate to 50400
[ 7502.095591] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=56156 end=56157) time 13 us, min 1272, max 1279, scanline start 1280, end 1283
[ 7688.813003] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=67377 end=67378) time 12 us, min 1272, max 1279, scanline start 1280, end 1280
[ 7826.841908] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=75672 end=75673) time 16 us, min 1272, max 1279, scanline start 1280, end 1282
[ 7884.332997] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=79127 end=79128) time 13 us, min 1272, max 1279, scanline start 1280, end 1282
[ 8303.544507] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=104320 end=104321) time 11 us, min 1272, max 1279, scanline start 1280, end 1280
[ 8304.592885] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=104383 end=104384) time 13 us, min 1272, max 1279, scanline start 1280, end 1281
[ 8388.040672] perf: interrupt took too long (5142 > 4950), lowering kernel.perf_event_max_sample_rate to 38700
[ 8891.835131] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=139674 end=139675) time 15 us, min 1272, max 1279, scanline start 1280, end 1281
[ 8952.404675] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=143314 end=143315) time 14 us, min 1272, max 1279, scanline start 1280, end 1282
[ 9156.877055] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=155602 end=155603) time 15 us, min 1272, max 1279, scanline start 1280, end 1283
[ 9172.085946] [drm:intel_pipe_update_end [i915]] *ERROR* Atomic update failure on pipe A (start=156516 end=156517) time 12 us, min 1272, max 1279, scanline start 1280, end 1280
--

However, I don't  notice anything.

I first commented posted this issue in bug 97529, where Ville Syrjälä attached a patch that fixes it. The same patch is attached here as well.

I've had my T100HA running during the day, with a few hours of usage, and the error prints are gone.
Comment 1 yann 2016-12-16 11:47:52 UTC
Reference to Ville's patch : https://patchwork.freedesktop.org/series/16863/
Comment 2 Ville Syrjala 2017-06-06 18:07:33 UTC
commit ec1b4ee2834e66884e5b0d3d465f347ff212e372
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Thu Dec 15 19:47:34 2016 +0200

    drm/i915: Workaround VLV/CHV DSI scanline counter hardware fail


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.